<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flooding</string>

	<string name="nav_home">News</string>
	<string name="nav_alarms">Alarms</string>
	<string name="nav_analysis">Data</string>
	<string name="nav_settings">Settings</string>

	<string name="nav_open">Open</string>
	<string name="nav_close">Close</string>

	<string name="map_dialog_station_info_title">Station Info</string>
	<string name="map_dialog_station_info">%1$s\nRiver km %2$.3f\nLatitude %3$f\nLongitude %4$f</string>


	<string name="menu_graph_select_series">Series to display</string>
	<string name="menu_graph_normalize">Show normalized plot</string>
	<string name="menu_graph_regular">Show regular plot</string>
	<string name="menu_graph_timestamp">Select timestamp from list</string>
	<string name="menu_graph_seekbar">Select timestamp</string>
	<string name="menu_graph_map">Show Map</string>

	<string name="graph_rangelabel_cm">Water Level (cm)</string>
	<string formatted="false" name="graph_rangelabel_pc">Water Level (%)</string>
	<string name="graph_domainlabel">Location along River (km)</string>

	<string name="menu_select_water_search">Search</string>
	<string name="menu_select_water_search_hint">Search river names</string>

	<string name="menu_alarms_add">Add alarm</string>


	<string name="alarms_empty">No alarms present.</string>
	<string name="alarms_description_above">When level above %1$.2f cm</string>
	<string name="alarms_description_below">When level below %1$.2f cm</string>
	<string name="alarms_new_add">Start alarm</string>
	<string name="alarms_new_station_description">Station</string>
	<string name="alarms_new_level_description">Water level in cm</string>
	<string name="alarms_new_level_hint">Water level</string>
	<string name="alarms_new_trigger_description">Alarm when water is</string>
	<string name="alarms_new_trigger_above">above level</string>
	<string name="alarms_new_trigger_below">below level</string>
	<string name="alarms_new_title_river">Select river</string>
	<string name="alarms_new_title_station">Select station</string>
	<string name="alarms_new_title_level">Select water level</string>
	<string name="alarms_new_created">Added new alarm</string>
	<string name="alarms_new_not_created">Not added</string>
	<string name="alarms_new_already_added">Already added!</string>
	<string name="alarms_registration_pending">Starting alarm ...</string>
	<string name="alarms_registration_error">Error starting alarm, tap to retry.</string>
	<string name="alarms_triggered_title">%1$s alarm triggered!</string>
	<string name="alarms_triggered_msg">%1$s is %2$s %3$.2f cm</string>


	<string name="series_select_dialog_title">Select Series to Display</string>
	<string name="series_monitor_dialog_title">Select a Timestamp to Display</string>
	<string name="series_water_levels">Water Levels</string>
	<string name="series_water_levels_normalized">Normalized Water Levels</string>
	<string name="series_mw">MW</string>
	<string name="series_mhw">MHW</string>
	<string name="series_mnw">MNW</string>
	<string name="series_mthw">MThw</string>
	<string name="series_mtnw">MTnw</string>
	<string name="series_hthw">HThw</string>
	<string name="series_ntnw">NTnw</string>

	<string name="btn_ok">Ok</string>
	<string name="btn_cancel">Cancel</string>
	<string name="help">Help</string>
	<string name="delete">Delete</string>
	<string name="select_all">Select all</string>
	<string name="never">never</string>


	<string name="prefs_cat_ods">Open Data Service</string>
	<string name="prefs_cat_ods_key">open_data_service</string>
	<string name="prefs_ods_servername">ODS Servername</string>
	<string name="prefs_ods_servername_key">ods_server_name</string>
	<string name="prefs_ods_servername_default">http://192.168.178.93:8182</string>
	<string name="prefs_ods_monitor">Record PegelOnline Source</string>
	<string name="prefs_ods_monitor_key">monitor</string>
	<string name="prefs_ods_sync_last">Last sync</string>
	<string name="prefs_ods_sync_last_key">last_sync</string>
	<string name="prefs_ods_sync_last_success">Last successful sync</string>
	<string name="prefs_ods_sync_last_success_key">last_successful_sync</string>
	<string name="prefs_ods_sync_last_fail">Last failed sync</string>
	<string name="prefs_ods_sync_last_fail_key">last_failed_sync</string>

	<string name="prefs_cat_ceps">CEP Service</string>
	<string name="prefs_cat_ceps_key">cep_service</string>
	<string name="prefs_ceps_servername">CEPS Servername</string>
	<string name="prefs_ceps_servername_key">ceps_server_name</string>
	<string name="prefs_ceps_servername_default">http://192.168.178.93:8183</string>


	<string name="news_selected">%1$d selected</string>
	<string name="news_deleted">Deleted %1$d item(s)</string>
	<string name="news_empty">Nothing new, please come back later.</string>

	<string name="news_intro_alarms_title">Alarms</string>
	<string name="news_intro_alarms_content">If you want to be alarmed when water levels reach a certain level, head over to the alarms section!</string>
	<string name="news_intro_data_title">Data</string>
	<string name="news_intro_data_content">Want more details about the current water situation? Check out the data section!</string>


	<string name="data_empty">No data found. Loading might take a little while when first starting the app.</string>
	<string name="data_station_count">%1$d stations</string>
	<string name="data_station_all">All stations</string>


	<string name="error_invalid_server_url">Invalid server url!</string>
	<string name="error_server_connection">Sorry, there was an error while communicating with the server.\nReason: %1$s\nPlease try closing and opening your app in a couple of minutes.</string>
	<string name="error_gcm_failed_title">Push Notifications</string>
	<string name="error_gcm_failed_content">Registration for push notifications failed. Tap to retry.</string>

	<string name="help_graph_timestamps_title">Timestamps</string>
	<string name="help_graph_timestamps_content">Choose what timestamp the graph should reflect.</string>
	<string name="help_graph_map_title">Map</string>
	<string name="help_graph_map_content">View the stations along this river on a map.</string>
	<string name="help_graph_normalize_title">Normalize Graph</string>
	<string name="help_graph_normalize_content">Be sure to check out the option to normalize the graph! It shows the current water level in relation to its average min and max values.</string>


	<string name="help_news_welcome_title">Welcome</string>
	<string name="help_news_welcome_content">You are now in the news section which shows you important events that have happend in the past.\n\nTo move between different sections tap the icon at the top!</string>
	<string name="help_news_news_title">News</string>
	<string name="help_news_news_content">News items have actions associated with them.\n\nYou can either tap them for easier navigation, or swipe them away once you are done with them.</string>
</resources>
